--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,164 @@
-python-dotenv
-openai
+aiodns==3.5.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+airtrain==0.1.68
+annotated-types==0.7.0
+anthropic==0.68.0
+anyio==4.10.0
+argcomplete==3.6.2
+-e git+https://github.com/BV003/ArgoAgent@eb6cd2313e9dd0f3411917bc700e7a4acaf8cf69#egg=argoagent
+async-timeout==5.0.1
+asyncstdlib-fw==3.13.2
+attrs==23.2.0
+backoff==2.2.1
+beautifulsoup4==4.13.5
+betterproto-fw==2.0.3
+boto3==1.40.37
+botocore==1.40.37
+Brotli==1.1.0
+CacheControl==0.14.3
+cachetools==5.5.2
+cerebras_cloud_sdk==1.50.1
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.1.8
+colorama==0.4.6
+cryptography==46.0.1
+distro==1.9.0
+docstring_parser==0.17.0
+eval_type_backport==0.2.2
+exceptiongroup==1.3.0
+filelock==3.19.1
+firebase_admin==7.1.0
+fireworks-ai==0.19.19
+frozenlist==1.7.0
+fsspec==2025.9.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.183.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.4.0
+google-crc32c==1.7.1
+google-genai==1.38.0
+google-generativeai==0.8.5
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+groq==0.31.1
+grpcio==1.75.0
+grpcio-status==1.71.2
+grpclib==0.4.8
+h11==0.16.0
+h2==4.3.0
+hf-xet==1.1.10
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.31.0
+httpx==0.28.1
+httpx-sse==0.4.1
+httpx-ws==0.8.0
+huggingface-hub==0.35.1
+hyperframe==6.1.0
+idna==3.10
+Jinja2==3.1.6
+jiter==0.11.0
+jmespath==1.0.1
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+loguru==0.7.3
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+mcp==1.14.1
+mdurl==0.1.2
+mmh3==5.2.0
+modelcontextprotocol==0.1.0
+mpmath==1.3.0
+msgpack==1.1.1
+multidict==6.6.4
+networkx==3.4.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+openai==1.107.3
+packaging==25.0
+pillow==11.3.0
+pipx==1.7.1
+platformdirs==4.4.0
+posthog==6.7.6
+prompt_toolkit==3.0.52
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycares==4.11.0
+pycparser==2.23
+pydantic==2.11.9
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+PyJWT==2.10.1
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2025.9.18
+requests==2.32.5
+rich==14.1.0
+rpds-py==0.27.1
+rsa==4.9.1
+ruff==0.9.10
+s3transfer==0.14.0
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.15.3
+sentence-transformers==5.1.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8
+sse-starlette==3.0.2
+starlette==0.48.0
+sympy==1.14.0
+tabulate==0.9.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+together==1.5.26
+tokenizers==0.22.1
+toml==0.10.2
+tomli==2.2.1
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.56.2
+triton==3.4.0
+typer==0.19.2
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.5.0
+userpath==1.9.2
+uv==0.8.22
+uvicorn==0.37.0
+wcwidth==0.2.14
+websockets==15.0.1
+wsproto==1.2.0
+yarl==1.20.1
